--- a/views/login.html
+++ b/views/login.html
@@ -55,16 +55,16 @@
                     <td height="113" background="/static/img/login_2.jpg">
                         <div style="position:relative; width:969px; height:113px;">
                             <div style="position:absolute; left:515px;">
-                                <input name="txt_U_name" id="txt_U_name" tabindex="1" style="border: 1px rgb(128, 128, 128) solid; width: 170px; height: 25px; color: rgb(0,0,0); font-size: 18px; font-weight: bold; background-color: rgb(255, 255, 255);" type="text">
+                                <input value="huazai" name="txt_U_name" id="txt_U_name" tabindex="1" style="border: 1px rgb(128, 128, 128) solid; width: 170px; height: 25px; color: rgb(0,0,0); font-size: 18px; font-weight: bold; background-color: rgb(255, 255, 255);" type="text">
                             </div>
                             <div style="position:absolute; left:515px; top:30px;">
-                                <input name="txt_U_Password" id="txt_U_Password" tabindex="2" style="border: 1px rgb(128, 128, 128) solid; width: 170px; height: 25px; color: rgb(0,0,0); font-size: 18px; font-weight: bold; background-color: rgb(255, 255, 255);" type="password">
+                                <input value="123456" name="txt_U_Password" id="txt_U_Password" tabindex="2" style="border: 1px rgb(128, 128, 128) solid; width: 170px; height: 25px; color: rgb(0,0,0); font-size: 18px; font-weight: bold; background-color: rgb(255, 255, 255);" type="password">
                             </div>
                             <div style="position:absolute; left:515px; top:60px;">
                                 <input name="txt_validate" id="txt_validate" tabindex="3" style="border: 1px rgb(128, 128, 128) solid; width: 60px; height: 25px; color: rgb(0,0,0); font-size: 18px; font-weight: bold; background-color: rgb(255, 255, 255);" type="text" maxlength="4">
                             </div>
-                            <div style="position:absolute; left:585px; top:60px;">
-                                <canvas id="canvas" width="100" height="30" onclick="draw();" style="border: 1px solid #ccc; border-radius: 5px;"></canvas>
+                            <div style="position:absolute; left:585px; top:60px; width: 100px; height: 30px; border: 1px solid #ccc; border-radius: 5px;" onclick="draw()">
+                                <img id="verifyCode" src="" alt="" style="width: 100%; height: 100%;">
                             </div>
                             <div style="position:absolute; left:515px; top:90px;">
                                 <input id="loginBtn" tabindex="4" class="btn" type="button" value="" onclick="">
