ADD: 赔率和下注

--- a/views/hr_index.html
+++ b/views/hr_index.html
@@ -58,58 +58,7 @@
                 <div class="cell betType">下注类型</div>
                 <div class="cell betMoney">下注金额</div>
             </div>
-            <div class="betInfoContent">
-                <div class="row">
-                    <div class="cell betTime">21:32:23</div>
-                    <div class="cell betType">特11</div>
-                    <div class="cell betMoney">123</div>
-                </div>
-                <div class="row">
-                    <div class="cell betTime">21:32:23</div>
-                    <div class="cell betType">特11</div>
-                    <div class="cell betMoney">123</div>
-                </div>
-                <div class="row">
-                    <div class="cell betTime">21:32:23</div>
-                    <div class="cell betType">特11</div>
-                    <div class="cell betMoney">123</div>
-                </div>
-                <div class="row">
-                    <div class="cell betTime">21:32:23</div>
-                    <div class="cell betType">特11</div>
-                    <div class="cell betMoney">123</div>
-                </div>
-                <div class="row">
-                    <div class="cell betTime">21:32:23</div>
-                    <div class="cell betType">特11</div>
-                    <div class="cell betMoney">123</div>
-                </div>
-                <div class="row">
-                    <div class="cell betTime">21:32:23</div>
-                    <div class="cell betType">特11</div>
-                    <div class="cell betMoney">123</div>
-                </div>
-                <div class="row">
-                    <div class="cell betTime">21:32:23</div>
-                    <div class="cell betType">特11</div>
-                    <div class="cell betMoney">123</div>
-                </div>
-                <div class="row">
-                    <div class="cell betTime">21:32:23</div>
-                    <div class="cell betType">特11</div>
-                    <div class="cell betMoney">123</div>
-                </div>
-                <div class="row">
-                    <div class="cell betTime">21:32:23</div>
-                    <div class="cell betType">特11</div>
-                    <div class="cell betMoney">123</div>
-                </div>
-                <div class="row">
-                    <div class="cell betTime">21:32:23</div>
-                    <div class="cell betType">特11</div>
-                    <div class="cell betMoney">123</div>
-                </div>
-            </div>
+            <div class="betInfoContent"></div>
         </div>
     </div>
     <div class="quickBetPanel leftPanel" style="display: none;">
@@ -272,7 +221,7 @@
             <div class="resultItem">总大@42.98 OK</div>
             <div class="resultItem">总大@42.98 OK</div>
         </div>
-        <div class="btn" onclick="getLastRecord();">返回</div>
+        <div class="btn" onclick="getLastRecord('back');">返回</div>
     </div>
 </div>
 <div class="right">
