--- a/views/hr_six.html
+++ b/views/hr_six.html
@@ -8,14 +8,14 @@
 		<meta http-equiv="Cache" content="no-cache">
 		<title></title>
 		<link href="/static/css/hr_common.css" rel="stylesheet" />
-		<link href="./static/css/hr_six.css" rel="stylesheet" />
+		<link href="/static/css/hr_six.css" rel="stylesheet" />
 		<script src="/static/js/lib/jquery.min.js"></script>
 		<script src="/static/js/config/config.js"></script>
 		<script src="/static/js/config/localConfig.js"></script>
 		<script src="/static/js/common.js"></script>
 		<script src="/static/js/config/networkConfig.js"></script>
 		<script src="/static/js/sendAjax.js"></script>
-		<script src="./static/js/hr_six.js"></script>
+		<script src="/static/js/hr_six.js"></script>
 	</head>
 	<body class="childrenPage">
 		<div class="ctrlPanel">
@@ -225,7 +225,7 @@
 					 <div class="cell w200 num20 item1020"><div class="numCell"><div class="blueBall">20</div></div><div class="oddsCell">封单</div><div class="betMoneyCell"><input class="betMoneyValue" type="number" info="1020" /></div></div>
 					 <div class="cell w200 num30 item1030"><div class="numCell"><div class="redBall">30</div></div><div class="oddsCell">封单</div><div class="betMoneyCell"><input class="betMoneyValue" type="number" info="1030" /></div></div>
 					 <div class="cell w200 num40 item1040"><div class="numCell"><div class="redBall">40</div></div><div class="oddsCell">封单</div><div class="betMoneyCell"><input class="betMoneyValue" type="number" info="1040" /></div></div>
-					 <div class="cell w200"><div class="numCell"></div><div class="oddsCell">封单</div><div class="betMoneyCell"></div></div>
+					 <div class="cell w200"></div>
 				</div>
 				<div class="towBox">
 				</div>
