FIX: 修改账户历史期数宽度，修改账户历史文字颜色，修复经典版开奖结果不重置的问题

--- a/static/css/hr_common.css
+++ b/static/css/hr_common.css
@@ -37,7 +37,10 @@ childrenPage{
 	border: solid 1px #d1a832;
 	width: 1000px;
 }
-
+#betTable,
+#issueTable {
+	width: 1073px;
+}
 .systemTable .head{
 	background: #d8bb64;
 	height: 20px;
